@@ -6,6 +6,7 @@
 	* Migrate the L10N file in the root folder to the new L10N file in Resources/Private/Language/locallang.xml
 	* Change extension icon from gif to png
 	* Move the main class to the new (namespace based) location
+	* Remove the old CLI and the old tasks, because the scheduler do not break directly. Please create the tasks as extbase command controller tasks and change your env
 
 2015-04-15  Tim Lochmüller <tim@fruit-lab.de
 
